# WikiScraper

./: .gitignore  Analiza.ipynb  Expirement.ipynb  README.md  args_parser.py  data_analyser.py  pyproject.toml  scraper.py  wiki_scraper.py
.github/workflows/: test.yml
Notes/: pythonProject.xopp
csv/: Randall_Monroe.csv
html/: List_of_all_comics_(full).html  Randall_Monroe.html
json/: Hauptseite.json  Randall_Monroe.json  Word_freq_Hauptseite_depth_1_articles_669.json  Word_freq_Main_Page_depth_1_articles_62.json  Word_freq_Randall_Monroe_depth_0.json  Word_freq_Randall_Monroe_depth_1.json  Word_freq_Randall_Munroe_depth_1.json  Word_freq_Randall_Munroe_depth_1_articles_128.json  count_words.json
lang_analysis/: language_analysis.py
src/: analyser.py  analyzer.py  args_parser.py  chart_engine.py  file_manager.py  language_analysis.py  pyvenv.cfg  scraper.py  test.py  wiki_scraper.py  wiki_scraper_integration_test.py
test/: Randall_Munroe.html  integration_test.py  unit_test.py  wiki_scraper_integration_test.py
wikiscraper/: analyzer.py  args_parser.py  chart_engine.py  file_manager.py  language_analysis.py  scraper.py  wiki_scraper.py
