[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
# Tutaj wymieniasz wszystkie zewnętrzne biblioteki:
dependencies = [
	"pandas",
	"beautifulsoup4",
	"requests"
	"wordfreq"
	"numpy"
	"matplotlib"
]

[project.optional-dependencies]
# Tutaj możesz dodać biblioteki potrzebne tylko do testów
dev = [
	"pytest"
]
