[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiscraper"
version = "0.1.0"
dependencies = [
	"pandas",
	"beautifulsoup4",
	"requests",
	"wordfreq",
	"numpy",
	"html5lib",
	"matplotlib"
]

[project.optional-dependencies]
dev = [
	"pytest"
]

[tool.pyright]
venvPath = "."
venv = "venv"
extraPaths = ["wikiscraper"]

[tool.setuptools]
packages = ["wikiscraper"]
